--- a/css/style.css
+++ b/css/style.css
@@ -56,13 +56,13 @@ header h4 {
 
 @media only screen and (max-width: 500px) {
   header h2 {
-    font-family: 'Pacifico';
+    font-family: 'Comic Neue';
     font-size: 45px;
     text-align: center;
     margin-bottom: 30px;
   }
   header h4 {
-    font-family: 'Pacifico';
+    font-family: 'Comic Neue';
     text-align: center;
     padding: 15px;
   }
